--- a/Fine_Tuning_LLMs_with_Hugging_Face_Complete_Code.ipynb
+++ b/Fine_Tuning_LLMs_with_Hugging_Face_Complete_Code.ipynb
@@ -30,7 +30,15 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q accelerate==0.21.0 peft==0.4.0 bitsandbytes==0.40.2 transformers==4.31.0 trl==0.4.7"
+        "# Install specific versions of necessary libraries for the project\n",
+        "\n",
+        "# accelerate: A library to accelerate PyTorch models\n",
+        "# peft: A library for Parameter Efficient Fine-Tuning\n",
+        "# bitsandbytes: A library for efficient computing with large-scale models\n",
+        "# transformers: Hugging Face library for state-of-the-art NLP models\n",
+        "# trl: A library for Training Reinforcement Learning with Hugging Face Transformers\n",
+        "\n",
+        "!pip install -q accelerate==0.21.0 peft==0.4.0 bitsandbytes==0.40.2 transformers==4.31.0 trl==0.4.7\n"
       ]
     },
     {
@@ -45,7 +53,10 @@
       },
       "outputs": [],
       "source": [
-        "!pip install huggingface_hub"
+        "# Install the huggingface_hub library\n",
+        "# huggingface_hub: A library for accessing and managing models and datasets from the Hugging Face Hub\n",
+        "\n",
+        "!pip install huggingface_hub\n"
       ]
     },
     {
@@ -56,11 +67,25 @@
       },
       "outputs": [],
       "source": [
+        "# Import PyTorch library for tensor operations and model handling\n",
         "import torch\n",
+        "\n",
+        "# Import SFTTrainer from trl for supervised fine-tuning of language models\n",
         "from trl import SFTTrainer\n",
+        "\n",
+        "# Import LoraConfig from peft for Low-Rank Adaptation of language models\n",
         "from peft import LoraConfig\n",
+        "\n",
+        "# Import load_dataset function from datasets library to load datasets\n",
         "from datasets import load_dataset\n",
-        "from transformers import (AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, TrainingArguments, pipeline)"
+        "\n",
+        "# Import various modules from transformers library:\n",
+        "# - AutoModelForCausalLM: Automatically loads a model for causal language modeling\n",
+        "# - AutoTokenizer: Automatically loads a tokenizer corresponding to the model\n",
+        "# - BitsAndBytesConfig: Configuration for optimizing model performance\n",
+        "# - TrainingArguments: Configuration for training the model\n",
+        "# - pipeline: High-level abstraction for various NLP tasks\n",
+        "from transformers import (AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, TrainingArguments, pipeline)\n"
       ]
     },
     {
@@ -164,10 +189,24 @@
       },
       "outputs": [],
       "source": [
-        "llama_model = AutoModelForCausalLM.from_pretrained(pretrained_model_name_or_path = \"aboonaji/llama2finetune-v2\",\n",
-        "                                                   quantization_config = BitsAndBytesConfig(load_in_4bit = True, bnb_4bit_compute_dtype = getattr(torch, \"float16\"), bnb_4bit_quant_type = \"nf4\"))\n",
+        "# Load a pre-trained language model for causal language modeling using the AutoModelForCausalLM class\n",
+        "# Specify the model name or path of the pre-trained model\n",
+        "# Apply quantization to reduce the model size and improve performance using BitsAndBytesConfig\n",
+        "\n",
+        "llama_model = AutoModelForCausalLM.from_pretrained(\n",
+        "    pretrained_model_name_or_path=\"aboonaji/llama2finetune-v2\",  # Path to the pre-trained model\n",
+        "    quantization_config=BitsAndBytesConfig(\n",
+        "        load_in_4bit=True,  # Load the model with 4-bit precision\n",
+        "        bnb_4bit_compute_dtype=getattr(torch, \"float16\"),  # Use float16 for computations\n",
+        "        bnb_4bit_quant_type=\"nf4\"  # Specify the quantization type\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "# Disable the use of cache during model execution to save memory\n",
         "llama_model.config.use_cache = False\n",
-        "llama_model.config.pretraining_tp = 1"
+        "\n",
+        "# Set the pretraining tensor parallelism to 1 (useful for multi-GPU training setups)\n",
+        "llama_model.config.pretraining_tp = 1\n"
       ]
     },
     {
@@ -249,9 +288,20 @@
       },
       "outputs": [],
       "source": [
-        "llama_tokenizer = AutoTokenizer.from_pretrained(pretrained_model_name_or_path = \"aboonaji/llama2finetune-v2\", trust_remote_code = True)\n",
+        "# Load a pre-trained tokenizer using the AutoTokenizer class\n",
+        "# Specify the model name or path of the pre-trained tokenizer\n",
+        "# Enable the use of remote code to load custom tokenizer code if needed\n",
+        "\n",
+        "llama_tokenizer = AutoTokenizer.from_pretrained(\n",
+        "    pretrained_model_name_or_path=\"aboonaji/llama2finetune-v2\",  # Path to the pre-trained tokenizer\n",
+        "    trust_remote_code=True  # Trust remote code for custom tokenizers\n",
+        ")\n",
+        "\n",
+        "# Set the padding token to be the same as the end-of-sequence (eos) token\n",
         "llama_tokenizer.pad_token = llama_tokenizer.eos_token\n",
-        "llama_tokenizer.padding_side = \"right\""
+        "\n",
+        "# Set the side on which padding will be applied (here, it's set to the right side)\n",
+        "llama_tokenizer.padding_side = \"right\"\n"
       ]
     },
     {
@@ -271,7 +321,14 @@
       },
       "outputs": [],
       "source": [
-        "training_arguments = TrainingArguments(output_dir = \"./results\", per_device_train_batch_size = 4, max_steps = 100)"
+        "# Define the training arguments using the TrainingArguments class\n",
+        "# Specify various training parameters such as output directory, batch size, and maximum training steps\n",
+        "\n",
+        "training_arguments = TrainingArguments(\n",
+        "    output_dir=\"./results\",  # Directory to save the training results and model checkpoints\n",
+        "    per_device_train_batch_size=4,  # Batch size for training on each device (GPU/CPU)\n",
+        "    max_steps=100  # Maximum number of training steps\n",
+        ")\n"
       ]
     },
     {
@@ -331,12 +388,24 @@
       },
       "outputs": [],
       "source": [
-        "llama_sft_trainer = SFTTrainer(model = llama_model,\n",
-        "                               args = training_arguments,\n",
-        "                               train_dataset = load_dataset(path = \"aboonaji/wiki_medical_terms_llam2_format\", split = \"train\"),\n",
-        "                               tokenizer = llama_tokenizer,\n",
-        "                               peft_config = LoraConfig(task_type = \"CAUSAL_LM\", r = 64, lora_alpha = 16, lora_dropout = 0.1),\n",
-        "                               dataset_text_field = \"text\")"
+        "# Initialize the SFTTrainer for supervised fine-tuning of the llama model\n",
+        "\n",
+        "llama_sft_trainer = SFTTrainer(\n",
+        "    model=llama_model,  # The pre-trained causal language model to fine-tune\n",
+        "    args=training_arguments,  # Training arguments defined earlier\n",
+        "    train_dataset=load_dataset(\n",
+        "        path=\"aboonaji/wiki_medical_terms_llam2_format\",  # Path to the training dataset\n",
+        "        split=\"train\"  # Use the training split of the dataset\n",
+        "    ),\n",
+        "    tokenizer=llama_tokenizer,  # Tokenizer corresponding to the model\n",
+        "    peft_config=LoraConfig(\n",
+        "        task_type=\"CAUSAL_LM\",  # Task type for low-rank adaptation (causal language modeling)\n",
+        "        r=64,  # Rank of the low-rank approximation\n",
+        "        lora_alpha=16,  # Scaling factor for the low-rank weights\n",
+        "        lora_dropout=0.1  # Dropout rate for the low-rank weights\n",
+        "    ),\n",
+        "    dataset_text_field=\"text\"  # The field in the dataset containing the text to be used for training\n",
+        ")\n"
       ]
     },
     {
@@ -385,10 +454,24 @@
       },
       "outputs": [],
       "source": [
+        "# Define a user prompt for the text generation task\n",
         "user_prompt = \"Please tell me about Bursitis\"\n",
-        "text_generation_pipeline = pipeline(task = \"text-generation\", model = llama_model, tokenizer = llama_tokenizer, max_length = 300)\n",
+        "\n",
+        "# Initialize a text generation pipeline using the loaded model and tokenizer\n",
+        "# Specify the task as text generation and set the maximum length of the generated text\n",
+        "text_generation_pipeline = pipeline(\n",
+        "    task=\"text-generation\",  # Specify the task as text generation\n",
+        "    model=llama_model,  # The fine-tuned language model\n",
+        "    tokenizer=llama_tokenizer,  # The tokenizer corresponding to the model\n",
+        "    max_length=300  # Maximum length of the generated text\n",
+        ")\n",
+        "\n",
+        "# Generate text based on the user prompt using the text generation pipeline\n",
+        "# The input prompt is wrapped with special tokens <s>[INST] and [/INST] for the model\n",
         "model_answer = text_generation_pipeline(f\"<s>[INST] {user_prompt} [/INST]\")\n",
-        "print(model_answer[0]['generated_text'])"
+        "\n",
+        "# Print the generated text from the model's output\n",
+        "print(model_answer[0]['generated_text'])\n"
       ]
     }
   ],
