--- a/Fine_Tuning_LLMs_with_Hugging_Face_Complete_Code.ipynb
+++ b/Fine_Tuning_LLMs_with_Hugging_Face_Complete_Code.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,7 +28,76 @@
         "id": "GLXwJqbjtPho",
         "outputId": "b7531010-64cd-487f-e6c6-67b0419cca0d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\AMIT KUMAR\\AppData\\Roaming\\Python\\Python312\\site-packages)\n",
+            "  error: subprocess-exited-with-error\n",
+            "  \n",
+            "  × Building wheel for tokenizers (pyproject.toml) did not run successfully.\n",
+            "  │ exit code: 1\n",
+            "  ╰─> [51 lines of output]\n",
+            "      running bdist_wheel\n",
+            "      running build\n",
+            "      running build_py\n",
+            "      creating build\n",
+            "      creating build\\lib.win-amd64-cpython-312\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\n",
+            "      copying py_src\\tokenizers\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\models\n",
+            "      copying py_src\\tokenizers\\models\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\models\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\decoders\n",
+            "      copying py_src\\tokenizers\\decoders\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\decoders\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\normalizers\n",
+            "      copying py_src\\tokenizers\\normalizers\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\normalizers\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\pre_tokenizers\n",
+            "      copying py_src\\tokenizers\\pre_tokenizers\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\pre_tokenizers\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\processors\n",
+            "      copying py_src\\tokenizers\\processors\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\processors\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\trainers\n",
+            "      copying py_src\\tokenizers\\trainers\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\trainers\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\base_tokenizer.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\bert_wordpiece.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\byte_level_bpe.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\char_level_bpe.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\sentencepiece_bpe.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\sentencepiece_unigram.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      copying py_src\\tokenizers\\implementations\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\implementations\n",
+            "      creating build\\lib.win-amd64-cpython-312\\tokenizers\\tools\n",
+            "      copying py_src\\tokenizers\\tools\\visualizer.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\tools\n",
+            "      copying py_src\\tokenizers\\tools\\__init__.py -> build\\lib.win-amd64-cpython-312\\tokenizers\\tools\n",
+            "      copying py_src\\tokenizers\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\n",
+            "      copying py_src\\tokenizers\\models\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\\models\n",
+            "      copying py_src\\tokenizers\\decoders\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\\decoders\n",
+            "      copying py_src\\tokenizers\\normalizers\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\\normalizers\n",
+            "      copying py_src\\tokenizers\\pre_tokenizers\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\\pre_tokenizers\n",
+            "      copying py_src\\tokenizers\\processors\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\\processors\n",
+            "      copying py_src\\tokenizers\\trainers\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\tokenizers\\trainers\n",
+            "      copying py_src\\tokenizers\\tools\\visualizer-styles.css -> build\\lib.win-amd64-cpython-312\\tokenizers\\tools\n",
+            "      running build_ext\n",
+            "      running build_rust\n",
+            "      error: can't find Rust compiler\n",
+            "      \n",
+            "      If you are using an outdated pip version, it is possible a prebuilt wheel is available for this package but pip is not able to install from it. Installing from the wheel would avoid the need for a Rust compiler.\n",
+            "      \n",
+            "      To update pip, run:\n",
+            "      \n",
+            "          pip install --upgrade pip\n",
+            "      \n",
+            "      and then retry package installation.\n",
+            "      \n",
+            "      If you did intend to build this package from source, try installing a Rust compiler from your system package manager and ensure it is on the PATH during installation. Alternatively, rustup (available at https://rustup.rs) is the recommended way to download and update the Rust compiler toolchain.\n",
+            "      [end of output]\n",
+            "  \n",
+            "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "  ERROR: Failed building wheel for tokenizers\n",
+            "ERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (tokenizers)\n"
+          ]
+        }
+      ],
       "source": [
         "# Install specific versions of necessary libraries for the project\n",
         "\n",
@@ -43,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,7 +120,49 @@
         "id": "eRZm_OAbs3qA",
         "outputId": "035d2e8d-b3eb-413e-b42c-5022573718d2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Defaulting to user installation because normal site-packages is not writeable\n",
+            "Collecting huggingface_hub\n",
+            "  Using cached huggingface_hub-0.24.5-py3-none-any.whl.metadata (13 kB)\n",
+            "Collecting filelock (from huggingface_hub)\n",
+            "  Using cached filelock-3.15.4-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting fsspec>=2023.5.0 (from huggingface_hub)\n",
+            "  Using cached fsspec-2024.6.1-py3-none-any.whl.metadata (11 kB)\n",
+            "Requirement already satisfied: packaging>=20.9 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from huggingface_hub) (24.1)\n",
+            "Collecting pyyaml>=5.1 (from huggingface_hub)\n",
+            "  Using cached PyYAML-6.0.2-cp312-cp312-win_amd64.whl.metadata (2.1 kB)\n",
+            "Requirement already satisfied: requests in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from huggingface_hub) (2.31.0)\n",
+            "Requirement already satisfied: tqdm>=4.42.1 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from huggingface_hub) (4.66.4)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from huggingface_hub) (4.12.2)\n",
+            "Requirement already satisfied: colorama in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from tqdm>=4.42.1->huggingface_hub) (0.4.6)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface_hub) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface_hub) (3.7)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface_hub) (2.2.1)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\amit kumar\\appdata\\roaming\\python\\python312\\site-packages (from requests->huggingface_hub) (2024.2.2)\n",
+            "Using cached huggingface_hub-0.24.5-py3-none-any.whl (417 kB)\n",
+            "Downloading fsspec-2024.6.1-py3-none-any.whl (177 kB)\n",
+            "Using cached PyYAML-6.0.2-cp312-cp312-win_amd64.whl (156 kB)\n",
+            "Using cached filelock-3.15.4-py3-none-any.whl (16 kB)\n",
+            "Installing collected packages: pyyaml, fsspec, filelock, huggingface_hub\n",
+            "Successfully installed filelock-3.15.4 fsspec-2024.6.1 huggingface_hub-0.24.5 pyyaml-6.0.2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\AMIT KUMAR\\AppData\\Roaming\\Python\\Python312\\site-packages)\n",
+            "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\AMIT KUMAR\\AppData\\Roaming\\Python\\Python312\\site-packages)\n",
+            "  WARNING: The script huggingface-cli.exe is installed in 'C:\\Users\\AMIT KUMAR\\AppData\\Roaming\\Python\\Python312\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\AMIT KUMAR\\AppData\\Roaming\\Python\\Python312\\site-packages)\n"
+          ]
+        }
+      ],
       "source": [
         "# Install the huggingface_hub library\n",
         "# huggingface_hub: A library for accessing and managing models and datasets from the Hugging Face Hub\n",
@@ -61,11 +172,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "nAMzy_0FtaUZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'torch'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Import PyTorch library for tensor operations and model handling\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Import SFTTrainer from trl for supervised fine-tuning of language models\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrl\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SFTTrainer\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+          ]
+        }
+      ],
       "source": [
         "# Import PyTorch library for tensor operations and model handling\n",
         "import torch\n",
@@ -187,7 +310,18 @@
         "id": "rzRN0gc95T0n",
         "outputId": "a9b12684-9075-4642-caae-0c7831561fff"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '\"c:/Users/AMIT KUMAR/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "# Load a pre-trained language model for causal language modeling using the AutoModelForCausalLM class\n",
         "# Specify the model name or path of the pre-trained model\n",
@@ -286,7 +420,18 @@
         "id": "aVlXsHao5lWZ",
         "outputId": "aa2a1c33-4f48-4159-aed2-5faff0ecbd2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '\"c:/Users/AMIT KUMAR/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "# Load a pre-trained tokenizer using the AutoTokenizer class\n",
         "# Specify the model name or path of the pre-trained tokenizer\n",
@@ -319,7 +464,18 @@
       "metadata": {
         "id": "OJXpOgBFuSrc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '\"c:/Users/AMIT KUMAR/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "# Define the training arguments using the TrainingArguments class\n",
         "# Specify various training parameters such as output directory, batch size, and maximum training steps\n",
@@ -386,7 +542,18 @@
         "id": "0yiTXT1m5rz6",
         "outputId": "f805ebc4-51b4-4fa1-cf24-b18a04ff05de"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '\"c:/Users/AMIT KUMAR/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "# Initialize the SFTTrainer for supervised fine-tuning of the llama model\n",
         "\n",
@@ -428,7 +595,18 @@
         "id": "oNAWrsSWaSXj",
         "outputId": "f11bfe3c-1fd1-40c4-c8f8-ee60779ecf5a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '\"c:/Users/AMIT KUMAR/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "llama_sft_trainer.train()"
       ]
@@ -452,7 +630,18 @@
         "id": "frlSLPin4IJ4",
         "outputId": "28633d3f-9323-4531-e112-5c46832893db"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.11' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '\"c:/Users/AMIT KUMAR/AppData/Local/Microsoft/WindowsApps/python3.10.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "# Define a user prompt for the text generation task\n",
         "user_prompt = \"Please tell me about Bursitis\"\n",
@@ -494,7 +683,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.4"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
